syntax = "proto3";
package pb;

service BGProxyService {
  rpc SetGreen(Target) returns (Result);
  rpc Rollback(Empty) returns (Result);
}

message Result {
  string msg = 1;
}
message Target {
  string url = 1;
  int32 expected_status = 2;
  int32 healthcheck_interval = 3;
  int32 unhealthy_limit = 4;
  int32 waiting_time = 5;
  string stop_command = 6;
}
message Empty {
}
